welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value getx
			if (getx() == 0){
                            ^